# model-api-hub

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  llm.txt  pyproject.toml  requirements.txt  setup.py  support_model.md  test_llm_availability.py
docs/: api_reference.md  llm_usage.md
model_api_hub/: .env.example  __init__.py  cli.py  config.example.yaml
model_api_hub/api/aggregators/: __init__.py  ai302.py  anyscale.py  baidu_aistudio.py  coreshub.py  dreamina.py  fireworks.py  gitee_moark.py  groq.py  hailuo.py  infinigence.py  kling.py  ksyun_starflow.py  kuaishou_vanchin.py  lanyun_maas.py  modelscope.py  novita.py  openrouter.py  paratera_ai.py  perplexity.py  poe.py  ppio.py  qiniu_ai.py  sensetime.py  siliconflow.py  sophnet.py  tencent_hunyuan.py  together.py  ucloud_ai.py  volcengine_ark.py
model_api_hub/api/audio/: __init__.py  azure_tts.py  baidu_tts.py  elevenlabs_tts.py  minimax_tts.py  openai_tts.py
model_api_hub/api/image/: __init__.py  baidu_image_gen.py  dashscope_image_gen.py  dreamina_gen.py  openai_image_gen.py  recraft_image_gen.py  siliconflow_image_gen.py  stability_image_gen.py  xunfei_image_gen.py
model_api_hub/api/llm/: __init__.py  anthropic_llm.py  azure_openai_llm.py  cohere_llm.py  dashscope_llm.py  deepseek_llm.py  gemini_llm.py  groq_llm.py  kimi_llm.py  minimax_llm.py  mistral_llm.py  modelscope_llm.py  openai_llm.py  perplexity_llm.py  siliconflow_llm.py  stepfun_llm.py  together_llm.py  xunfei_llm.py  (+2 more)
model_api_hub/utils/: __init__.py  config.py
tests/: conftest.py  test_audio.py  test_image.py  test_llm.py  test_llm_streaming.py  test_video.py  test_vlm.py
(+15 files in other folders)
